# cp_sat

./: .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  build.rs
src/: builder.rs  cp-sat-wrapper.cc  cp-sat-wrapper.h  ffi.rs  lib.rs  main.rs  solve_wrapper.h
toolchains/: BUILD  cc_toolchain_config.bzl
