[package]
name = "cp_sat"
version = "0.3.3"
edition = "2021"
description = "Rust bindings to the Google CP-SAT constraint programming solver."
documentation = "https://docs.rs/cp_sat"
repository = "https://github.com/KardinalAI/cp_sat"
license = "Apache-2.0"
keywords = ["constraint", "programming", "CP"]
categories = ["api-bindings", "mathematics", "science"]
readme = "README.md"

[workspace]
resolver = "2"

[dependencies]
bytes = "1.1.0"
cxx = "1.0"
env_logger = "0.11.1"
libc = "0.2.151"
log = "0.4.20"
smallvec = { version = "1.6.1", default-features = false, features = ["union"]}
prost = "0.12.3"
tonic = "0.11.0"

[build-dependencies]
cc = "1.0"
cxx-build = "1.0"
prost-build = { version = "0.12.3" }
prost-types = "0.12.3"
protoc-gen-prost = "0.2.3"
protoc-gen-tonic = "0.3.0"
