[package]
name = "cp_sat"
version = "0.3.3"
edition = "2021"
description = "Rust bindings to the Google CP-SAT constraint programming solver."
documentation = "https://docs.rs/cp_sat"
repository = "https://github.com/KardinalAI/cp_sat"
license = "Apache-2.0"
keywords = ["constraint", "programming", "CP"]
categories = ["api-bindings", "mathematics", "science"]
readme = "README.md"

[workspace]
resolver = "2"

[dependencies]
bytes = "1.10.0"
env_logger = "0.11.6"
libc = "0.2.169"
log = "0.4.25"
smallvec = { version = "1.14.0", default-features = false, features = ["union"]}
prost = "0.13.5"
tonic = "0.12.3"

[build-dependencies]
cc = "1.2.14"
cxx-build = "1.0.140"
prost-build = { version = "0.13.5" }
prost-types = "0.13.5"
protoc-gen-prost = "0.4.0"
protoc-gen-tonic = "0.4.1"
